@@ -1,7 +1,7 @@
 FROM debian:stretch
 MAINTAINER František Dvořák <valtri@civ.zcu.cz>
 
-ENV v 3.4.1
+ENV v 3.5
 
 WORKDIR /root
 
@@ -24,7 +24,6 @@ RUN mkdir -p ~/.config/mc/ \
 && ln -s /usr/lib/mc/mc.sh /etc/profile.d/
 
 # tomcat
-#only for java 7: -XX:PermSize=128m -XX:MaxPermSize=256m 
 RUN echo 'JAVA_OPTS="${JAVA_OPTS} -Xms256m -Xmx512m -Xss1m -Dmidpoint.home=/var/opt/midpoint -Djavax.net.ssl.trustStore=/var/opt/midpoint/keystore.jceks -Djavax.net.ssl.trustStoreType=jceks"' >> /etc/default/tomcat8
 RUN mkdir /var/opt/midpoint
 RUN chown tomcat8:tomcat8 /var/opt/midpoint
